more skip scan tests, fix bugs