@@ -31,69 +31,45 @@ import java.io.DataInput;
 import java.io.DataOutput;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import org.apache.hadoop.conf.Configuration;
-import org.apache.hadoop.hbase.HBaseConfiguration;
+import java.util.Objects;
 import org.apache.hadoop.hbase.KeyValue;
-import org.apache.hadoop.hbase.filter.Filter;
-import org.apache.hadoop.hbase.io.HbaseObjectWritable;
+import org.apache.hadoop.hbase.filter.FilterBase;
 import org.apache.hadoop.hbase.util.Bytes;
-import org.apache.hadoop.hbase.util.Pair;
-import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.io.WritableUtils;
-import com.google.common.base.Objects;
 import com.google.common.base.Preconditions;
 import com.google.common.hash.HashFunction;
 import com.google.common.hash.Hasher;
 import com.google.common.hash.Hashing;
+import com.salesforce.phoenix.query.KeyRange;
 
-public class SkipScanFilter implements Filter {
+public class SkipScanFilter extends FilterBase {
     private static final byte[] FIN = {};
-    private static final Configuration conf = HBaseConfiguration.create();
-    private Filter filter;
-    private List<List<Pair<byte[],byte[]>>> cnf;
+    private static final byte[] NEXT_ROW = {};
+    private List<List<KeyRange>> cnf;
     private byte[] hint = null;
 
     public SkipScanFilter() {
     }
 
-    public SkipScanFilter setFilter(Filter filter) {
-        Preconditions.checkState(this.filter == null);
-        Preconditions.checkNotNull(filter);
-        this.filter = filter;
-        return this;
-    }
-
-    public SkipScanFilter setCnf(List<List<byte[]>> cnf) {
+    public SkipScanFilter setCnf(List<List<KeyRange>> cnf) {
         Preconditions.checkState(this.cnf == null);
         Preconditions.checkNotNull(cnf);
-        this.cnf = new ArrayList<List<Pair<byte[],byte[]>>>();
-        for (int i=0; i<cnf.size(); i++) {
-            int bytes = Math.max(cnf.get(i).get(0).length, cnf.get(i).get(1).length);
-            assert bytes != 0 : "not sure how to handle EVERYTHING segments yet";
-            Preconditions.checkArgument(cnf.get(i).size() % 2 == 0);
-            List<Pair<byte[],byte[]>> ors = new ArrayList<Pair<byte[],byte[]>>();
-            this.cnf.add(ors);
-            for (int j=0; j<cnf.get(i).size(); j+=2) {
-                byte[] first = cnf.get(i).get(j);
-                byte[] second = cnf.get(i).get(j+1);
-                Preconditions.checkArgument(first.length == 0 || first.length == bytes);
-                Preconditions.checkArgument(second.length == 0 || second.length == bytes);
-                Preconditions.checkArgument(first.length == 0 || second.length == 0 || Bytes.compareTo(first, second) <= 0);
-                if (j+2 < cnf.get(i).size()) {
-                    Preconditions.checkArgument(second.length != 0);
-                    Preconditions.checkArgument(cnf.get(i).get(j+2).length != 0);
-                    Preconditions.checkArgument(Bytes.compareTo(second, cnf.get(i).get(j+2)) < 0);
+        for (List<KeyRange> disjunction : cnf) {
+            KeyRange prev = null;
+            for (KeyRange range : disjunction) {
+                Preconditions.checkArgument(!range.upperUnbound());
+                Preconditions.checkArgument(!range.lowerUnbound());
+                Preconditions.checkArgument(KeyRange.EMPTY_RANGE != range);
+                Preconditions.checkArgument(KeyRange.EVERYTHING_RANGE != range);
+                if (prev != null) {
+                    Preconditions.checkArgument(KeyRange.COMPARATOR.compare(prev, range) < 0);
+                    prev = range;
                 }
-                ors.add(Pair.newPair(first, second));
             }
         }
+        this.cnf = cnf;
         return this;
-    }
-    
-    public Filter getFilter() {
-        return filter;
     }
     
     @Override
@@ -101,131 +77,166 @@ public class SkipScanFilter implements Filter {
         if (FIN != this.hint) {
             this.hint = null;
         }
-        filter.reset();
     }
 
     @Override public boolean filterAllRemaining() {
-        return FIN == this.hint || filter.filterAllRemaining();
+        return FIN == this.hint;
     }
     
     @Override
     public boolean filterRowKey(final byte[] data, int offset, int length) {
         int mylen = 0;
         for (int i=0; i<cnf.size(); i++) {
-            mylen += Math.max(cnf.get(i).get(0).getFirst().length, cnf.get(i).get(0).getSecond().length);
+            mylen += Math.max(cnf.get(i).get(0).getLowerRange().length, cnf.get(i).get(0).getUpperRange().length);
         }
         byte[] hint = new byte[mylen];
         int hintoffset = 0;
         outer: for (int i=0; i<cnf.size(); i++) {
-            List<Pair<byte[],byte[]>> ors = cnf.get(i);
+            List<KeyRange> ors = cnf.get(i);
+            int keyPartLen = 0;
             for (int j=0; j<ors.size(); j++) {
-                Pair<byte[],byte[]> range = ors.get(j);
-                int cmpLower = range.getFirst().length == 0 ? 1 : Bytes.compareTo(data, offset + hintoffset, range.getFirst().length, range.getFirst(), 0, range.getFirst().length);
-                int cmpUpper = range.getSecond().length == 0 ? -1 : Bytes.compareTo(data, offset + hintoffset, range.getSecond().length, range.getSecond(), 0, range.getSecond().length);
-                if (cmpLower < 0) {
-                    assert cmpUpper < 0;
-                    System.arraycopy(range.getFirst(), 0, hint, hintoffset, range.getFirst().length);
-                    hintoffset += range.getFirst().length;
+                KeyRange range = ors.get(j);
+
+                while (hintoffset + keyPartLen < length 
+                        && data[offset + hintoffset + keyPartLen] != 0
+                        && keyPartLen < Math.max(range.getLowerRange().length, range.getUpperRange().length)) {
+                    keyPartLen++;
+                }
+                
+                Intersection intersection = intersect(range, data, offset + hintoffset, keyPartLen);
+                byte[] lower = range.getLowerRange();
+                switch (intersection) {
+                case BEFORE_LOWER:
+                    System.arraycopy(lower, 0, hint, hintoffset, lower.length);
+                    hintoffset += lower.length;
                     while (++i < cnf.size()) {
-                        Pair<byte[],byte[]> first = cnf.get(i).get(0);
-                        System.arraycopy(first.getFirst(), 0, hint, hintoffset, first.getFirst().length);
-                        hintoffset += first.getFirst().length;
+                        KeyRange first = cnf.get(i).get(0);
+                        System.arraycopy(first.getLowerRange(), 0, hint, hintoffset, first.getLowerRange().length);
+                        hintoffset += first.getLowerRange().length;
                     }
                     this.hint = hint;
                     break outer;
-                } else if (cmpUpper <= 0) {
-                    System.arraycopy(data, offset + hintoffset, hint, hintoffset, range.getFirst().length);
-                    hintoffset += range.getFirst().length;
+                case AT_LOWER:
+                    if (!range.isLowerInclusive()) {
+                        this.hint = NEXT_ROW;
+                        break;
+                    } else {
+                        System.arraycopy(data, offset + hintoffset, hint, hintoffset, lower.length);
+                        hintoffset += lower.length;
+                        continue outer;
+                    }
+                case BETWEEN_LOWER_AND_UPPER:
+                    System.arraycopy(data, offset + hintoffset, hint, hintoffset, lower.length);
+                    hintoffset += lower.length;
                     continue outer;
+                case AT_UPPER:
+                    if (!range.isUpperInclusive()) {
+                        this.hint = FIN;
+                        break outer;
+                    } else {
+                        System.arraycopy(data, offset + hintoffset, hint, hintoffset, lower.length);
+                        hintoffset += lower.length;
+                        continue outer;
+                    }
+                case ABOVE_UPPER:
+                    this.hint = FIN;
+                    break outer;
+                default:
+                    assert false;
                 }
             }
-            // went past the end!
-            this.hint = FIN;
         }
-        boolean removeEntireRow = filter.filterRowKey(data, offset, length);
-        if (this.hint == null) {
-            return removeEntireRow;
+        if (this.hint == FIN) {
+            return true;
         } else {
             return false;
         }
     }
-    @Override
-    public ReturnCode filterKeyValue(KeyValue v) {
-        ReturnCode code = filter.filterKeyValue(v);
-        if (this.hint != null) {
-            // we can skip!
-            assert code == ReturnCode.SKIP || code == ReturnCode.NEXT_ROW: "skip hint and subfilter disagree: " + code;
-            if (this.hint == FIN) {
-                return ReturnCode.SKIP;
-            }
-            return ReturnCode.SEEK_NEXT_USING_HINT;
+    private static enum Intersection {
+        BEFORE_LOWER,
+        AT_LOWER,
+        BETWEEN_LOWER_AND_UPPER,
+        AT_UPPER,
+        ABOVE_UPPER
+    }
+    private static Intersection intersect(KeyRange range, byte[] data, int offset, int length) {
+        byte[] lower = range.getLowerRange();
+        int cmpLower = Bytes.compareTo(data, offset, length, lower, 0, lower.length);
+        if (cmpLower < 0) {
+            return Intersection.BEFORE_LOWER;
+        } else if (cmpLower == 0) {
+            return Intersection.AT_LOWER;
+        }
+        byte[] upper = range.getUpperRange();
+        int cmpUpper = Bytes.compareTo(data, offset, length, upper, 0, upper.length);
+        if (cmpUpper < 0) {
+            return Intersection.BETWEEN_LOWER_AND_UPPER;
+        } else if (cmpUpper == 0) {
+            return Intersection.AT_UPPER;
         } else {
-            return code;
+            return Intersection.ABOVE_UPPER;
         }
     }
 
+    @Override
+    public ReturnCode filterKeyValue(KeyValue v) {
+        if (this.hint == null) {
+            return ReturnCode.INCLUDE;
+        }
+        // we can skip!
+        if (this.hint == FIN) {
+            return ReturnCode.NEXT_ROW;
+        }
+        if (this.hint == NEXT_ROW) {
+            return ReturnCode.NEXT_ROW;
+        }
+        return ReturnCode.SEEK_NEXT_USING_HINT;
+    }
+
     @Override public KeyValue getNextKeyHint(KeyValue currentKV) {
+        Preconditions.checkState(hint != FIN && hint != NEXT_ROW);
+        if (hint == null) {
+            return null;
+        }
         return KeyValue.createFirstOnRow(hint);
     }
     
-    @Override public boolean hasFilterRow() {
-        return filter.hasFilterRow();
-    }
-
-    @Override public void filterRow(List<KeyValue> kvs) {
-        assert filter.hasFilterRow();
-        filter.filterRow(kvs);
-    }
-
-    @Override
-    public boolean filterRow() {
-        return filter.filterRow();
-    }
-
     @Override public void readFields(DataInput in) throws IOException {
-        filter = (Filter)HbaseObjectWritable.readObject(in, conf);
         int n = in.readInt();
-        cnf = new ArrayList<List<Pair<byte[],byte[]>>>();
+        cnf = new ArrayList<List<KeyRange>>();
         for (int i=0; i<n; i++) {
             int orlen = in.readInt();
-            List<Pair<byte[],byte[]>> orclause = new ArrayList<Pair<byte[],byte[]>>();
+            List<KeyRange> orclause = new ArrayList<KeyRange>();
             cnf.add(orclause);
             for (int j=0; j<orlen; j++) {
-                orclause.add(Pair.newPair(WritableUtils.readCompressedByteArray(in), WritableUtils.readCompressedByteArray(in)));
+                orclause.add(
+                        KeyRange.getKeyRange(
+                                WritableUtils.readCompressedByteArray(in), true, 
+                                WritableUtils.readCompressedByteArray(in), true));
             }
         }
     }
 
     @Override public void write(DataOutput out) throws IOException {
-        HbaseObjectWritable.writeObject(out, filter, Writable.class, conf);
         out.writeInt(cnf.size());
-        for (List<Pair<byte[],byte[]>> orclause : cnf) {
+        for (List<KeyRange> orclause : cnf) {
             out.writeInt(orclause.size());
-            for (Pair<byte[],byte[]> arr : orclause) {
-                WritableUtils.writeCompressedByteArray(out, arr.getFirst());
-                WritableUtils.writeCompressedByteArray(out, arr.getSecond());
+            for (KeyRange arr : orclause) {
+                WritableUtils.writeCompressedByteArray(out, arr.getLowerRange());
+                WritableUtils.writeCompressedByteArray(out, arr.getUpperRange());
             }
         }
-    }
-
-    @Override public KeyValue transform(KeyValue v) {
-        return filter.transform(v);
-    }
-
-    @Override public boolean isFamilyEssential(byte[] name) {
-        return filter.isFamilyEssential(name);
     }
 
     @Override public int hashCode() {
         HashFunction hf = Hashing.goodFastHash(32);
         Hasher h = hf.newHasher();
-        h.putInt(filter.hashCode()); 
         h.putInt(cnf.size());
         for (int i=0; i<cnf.size(); i++) {
             h.putInt(cnf.get(i).size());
             for (int j=0; j<cnf.size(); j++) {
-                h.putBytes(cnf.get(i).get(j).getFirst());
-                h.putBytes(cnf.get(i).get(j).getSecond());
+                h.putBytes(cnf.get(i).get(j).getLowerRange());
+                h.putBytes(cnf.get(i).get(j).getUpperRange());
             }
         }
         return h.hash().asInt();
@@ -234,33 +245,12 @@ public class SkipScanFilter implements Filter {
     @Override public boolean equals(Object obj) {
         if (!(obj instanceof SkipScanFilter)) return false;
         SkipScanFilter other = (SkipScanFilter)obj;
-        if (!Objects.equal(filter, other.filter)) return false;
-        if (cnf.size() != other.cnf.size()) return false;
-        for (int i=0; i<cnf.size(); i++) {
-            if (cnf.get(i).size() != other.cnf.get(i).size()) return false;
-            for (int j=0; j<cnf.size(); j++) {
-                if (!Arrays.equals(cnf.get(i).get(j).getFirst(), other.cnf.get(i).get(j).getFirst())) return false;
-                if (!Arrays.equals(cnf.get(i).get(j).getSecond(), other.cnf.get(i).get(j).getSecond())) return false;
-            }
-        }
-        return true;
+        return Objects.deepEquals(cnf, other.cnf);
     }
 
     @Override public String toString() {
         StringBuilder sb = new StringBuilder();
-        sb.append("[");
-        for (int i=0; i<cnf.size(); i++) {
-            if (i>0) sb.append(", ");
-            sb.append("[");
-            for (int j=0; j<cnf.get(i).size(); j++) {
-                if (j>0) sb.append(", ");
-                sb.append("[").append(Bytes.toStringBinary(cnf.get(i).get(j).getFirst()));
-                sb.append(", ").append(Bytes.toStringBinary(cnf.get(i).get(j).getFirst())).append("]");
-            }
-            sb.append("]");
-        }
-        sb.append("]");
-        sb.append(", filter=").append(filter);
+        sb.append(cnf.toString());
         return sb.toString();
     }
 }
